# enzyme-design-smw-phd-scripts

./: .gitignore  LICENSE  README.md  SimplePdbLib.py  SimpleXyzMath3.py  hbonding_network.py  metrics_and_hbond_rosetta_seth_no_RELAX.py  metrics_and_hbond_rosetta_seth_no_RELAX_V2.py  repo_paths.py  setup_special_scripts.py
ESM/: ESM_mutation_suggestions.py  ESM_score_sequences.py  diag.sbatch  download_saprot.py  download_saprot.sbatch  saprot_utils.py  test_esmc.py  test_esmc.sbatch  test_saprot.py  test_saprot.sbatch
advanced_structure_prediction_tools/: analyze_phosphorane_energy_ranked.py  analyze_phosphorane_geometry.py  analyze_phosphorane_smiles_variants.py  analyze_vanadate_geometry.py  concat_af3_sc_dir_of_subdirs.py  concat_af3_sc_dir_of_subdirs.py.bak.20260602  make_af3_json_input.py  make_af3_json_input_priorVERSION.py  make_af3_json_input_priorVERSION_260112.py  make_chai_input.py  make_chai_input_V2.py  make_chai_input_V3.py  make_chai_inputs_MAIN.py  process_af3_cif.py  process_af3_cif_OLD.py  process_af3_cif_PREREFACTOR.py  process_af3_pdb.py  process_af3_pdb.py.bak.20260603  process_af3_pdb_apo.py  process_af3_pdb_backup260112.py  process_af3_pdb_backup260127.py  process_af3_pdb_backup260426.py  process_chai_pdb_MAIN.py  process_chai_pdb_WITH_N_ANDor_C_TAGS.py  process_chai_pdb_homoOLIGOMER_MAIN.py
af2_analysis_and_tools/: af2_parse_processing_multi.py  align_af2_with_inputs_and_copy_ligand.py  process_af2_pdb.py  sidechain_rmsd_and_info_af2_matching_res-Copy1.py  sidechain_rmsd_and_info_af2_matching_res.py  sidechain_rmsd_and_info_af2_matching_res_v2.py
chemnet/: process_chemnet_UNDER_CONSTRUCTION.py  process_chemnet_original.py  process_chemnet_original_chatgtp_debug_for_niche_error.py  process_chemnet_original_has_small_bugs.py
design_filtering/: contact_counter__MAIN.py  contact_counter__STEP1_calculate_contacts.py  contact_counter__STEP2_parse_coord_clouds_for_metrics.py  execute_fpocket_on_holo_structure__MAIN.py  execute_fpocket_on_holo_structure__STEP1_run_fpocket.py  execute_fpocket_on_holo_structure__STEP2_compile_fpocket_metrics.py  metric_monster__MAIN.py  protein_size_shape_metrics__MAIN.py  protein_size_shape_metrics__STEP1_ligand_metrics.py
experimental_processing_scripts/: calc_protein_ec_mw_Donghyo.py  get_design_seqs_and_biophysical_properties__MAIN.py
fast_relax_scripts/: constrained_fastRELAX_simple.py  constrained_fastRELAX_simple_backup.py  constrained_fastRELAX_simple_mod.py  cst_fastRELAX_basedON_fastmpnnDesignScript.py
fastmpnn_design/: fastmpnn_ZnEsterase_SETH_LINKED.py  fastmpnndesign_ZnEsterase.py  fastmpnndesign_ZnEsterase_enhancedMPNNv2.py
fastmpnn_design/enhanced_FastMPNNDesign/: README.md  REQUIREMENTS.md  pyproject.toml
fastmpnn_design/enhanced_FastMPNNDesign/fastmpnndesign/: __init__.py  catres.py  cli.py  config.py  constants.py  constraints.py  layer_detection.py  logging_config.py  mpnn_bias.py  mpnn_runner.py  orchestrator.py  protocol.py  relax.py  remark666.py  rosetta_init.py  scorefunction.py  scoring.py  task_operations.py  utils.py
fastmpnn_design/enzyme_FastMPNNdesign/: pyproject.toml  run_step1.py
fastmpnn_design/enzyme_FastMPNNdesign/examples/: run_step1.sh
fastmpnn_design/enzyme_FastMPNNdesign/remastered_fastmpnn/: __init__.py  constants.py  logging_config.py
fastmpnn_design/enzyme_FastMPNNdesign/remastered_fastmpnn/core/: __init__.py  coordinate_utils.py  pdb_io.py  remark666.py  residue_data.py
fastmpnn_design/enzyme_FastMPNNdesign/remastered_fastmpnn/step1_coordinate_transform/: __init__.py  cli.py  coordinate_transformer.py  interaction_detection.py
fastmpnn_design/enzyme_FastMPNNdesign/remastered_fastmpnn/step2_rosetta_relax/: __init__.py
fastmpnn_design/enzyme_FastMPNNdesign/remastered_fastmpnn/step3_mpnn_design/: __init__.py
fastmpnn_design/enzyme_FastMPNNdesign/tests/: __init__.py  conftest.py  test_coordinate_transform.py  test_integration.py  test_interaction_detection.py  test_remark666.py
fastmpnn_design/evo_FastMPNNdesign/: RELAXATION_OVERHAUL_PLAN.md  RELAXATION_TEST_ANALYSIS.md  analyze_results.py  analyze_test_results.py  biochemist_review.md  claude_plan_original.md  design_goal.md  progress_and_updates.md  pyproject.toml
fastmpnn_design/evo_FastMPNNdesign/fastmpnndesign/: __init__.py  alignment.py  cli.py  config.py  constants.py  constraints.py  contact_detection.py  filtering.py  ligand.py  logging_config.py  metrics.py  mpnn_runner.py  orchestrator.py  protonation.py  relax_runner.py  remark666.py  slurm.py  utils.py
fastmpnn_design/evo_FastMPNNdesign/tests/: __init__.py  quick_relax_test.py  test_constraints.py  test_contact_detection.py  test_mpnn_runner.py  test_relaxation_overhaul.py  test_remark666.py
from_declan/: diffusion_analysis_declan_jonas.py
from_indrek/: esterase_scoring.py  predesign_FMD.py  predesign_FMD_v2_seth.py  process_diffusion_outputs_250506_SETH_MOD.py
general_utils/: add_remark666_lines_AND_rosetta_hydrogens_to_pdb.py  add_remark666_lines_AND_rosetta_hydrogens_to_pdb_OPTIMIZED.py  add_remark666_lines_to_pdb.py  align_prediction_to_ref_pdb_and_copy_lig.py  align_prediction_to_ref_pdb_and_copy_lig_BACKUP_20260130.py  check_pdbs_for_remark666_lines.py  (+6 more)
(+314 files in other folders)
