[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-fastmpnndesign"
version = "0.1.0"
description = "Enhanced FastMPNN Design for enzyme active site optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Enhanced FastMPNN Design Team"}
]
keywords = ["protein design", "enzyme design", "MPNN", "PyRosetta", "machine learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[project.scripts]
enhanced-fastmpnndesign = "fastmpnndesign.cli:main"

[project.urls]
"Homepage" = "https://github.com/example/enhanced-fastmpnndesign"
"Bug Tracker" = "https://github.com/example/enhanced-fastmpnndesign/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastmpnndesign*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
