[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remastered-fastmpnn"
version = "0.1.0"
description = "Remastered FastMPNNdesign - Enzyme Design Pipeline"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "woodbuse"}
]
requires-python = ">=3.8"
keywords = ["enzyme design", "protein engineering", "catalysis", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
step1-coordinate-transform = "remastered_fastmpnn.step1_coordinate_transform.cli:main"

[project.urls]
Homepage = "https://github.com/woodbuse/remastered-fastmpnn"
Documentation = "https://github.com/woodbuse/remastered-fastmpnn#readme"
Repository = "https://github.com/woodbuse/remastered-fastmpnn.git"
Issues = "https://github.com/woodbuse/remastered-fastmpnn/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["remastered_fastmpnn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
